--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,9 +9,12 @@
         type="text"
         formControlName="name"
         class="form-control"
+        [class.invalid]="isFieldInvalid('name')"
         placeholder="Enter your name">
-      <div *ngIf="premiumForm.get('name')?.invalid && premiumForm.get('name')?.touched" class="error">
-        Name is required
+      <div *ngIf="isFieldInvalid('name')" class="error">
+        <span *ngIf="getFieldError('name', 'required')">Name is required</span>
+        <span *ngIf="getFieldError('name', 'minlength')">Name must be at least 2 characters</span>
+        <span *ngIf="getFieldError('name', 'maxlength')">Name cannot exceed 100 characters</span>
       </div>
     </div>
 
@@ -22,12 +25,12 @@
         type="number"
         formControlName="ageNextBirthday"
         class="form-control"
+        [class.invalid]="isFieldInvalid('ageNextBirthday')"
         placeholder="Enter age next birthday">
-      <div *ngIf="premiumForm.get('ageNextBirthday')?.invalid && premiumForm.get('ageNextBirthday')?.touched" class="error">
-        <span *ngIf="premiumForm.get('ageNextBirthday')?.errors?.['required']">Age is required</span>
-        <span *ngIf="premiumForm.get('ageNextBirthday')?.errors?.['min'] || premiumForm.get('ageNextBirthday')?.errors?.['max']">
-          Age must be between 1 and 100
-        </span>
+      <div *ngIf="isFieldInvalid('ageNextBirthday')" class="error">
+        <span *ngIf="getFieldError('ageNextBirthday', 'required')">Age is required</span>
+        <span *ngIf="getFieldError('ageNextBirthday', 'tooYoung')">Age must be at least 1</span>
+        <span *ngIf="getFieldError('ageNextBirthday', 'tooOld')">Age cannot exceed 100</span>
       </div>
     </div>
 
@@ -38,9 +41,14 @@
         type="text"
         formControlName="dateOfBirth"
         class="form-control"
-        placeholder="MM/YYYY">
-      <div *ngIf="premiumForm.get('dateOfBirth')?.invalid && premiumForm.get('dateOfBirth')?.touched" class="error">
-        Date of Birth is required
+        [class.invalid]="isFieldInvalid('dateOfBirth')"
+        placeholder="MM/YYYY"
+        maxlength="7">
+      <div *ngIf="isFieldInvalid('dateOfBirth')" class="error">
+        <span *ngIf="getFieldError('dateOfBirth', 'required')">Date of Birth is required</span>
+        <span *ngIf="getFieldError('dateOfBirth', 'invalidDateFormat')">Please use MM/YYYY format</span>
+        <span *ngIf="getFieldError('dateOfBirth', 'invalidMonth')">Invalid month</span>
+        <span *ngIf="getFieldError('dateOfBirth', 'invalidYear')">Year must be between {{premiumForm.get('dateOfBirth')?.errors?.['invalidYear']?.min}} and {{premiumForm.get('dateOfBirth')?.errors?.['invalidYear']?.max}}</span>
       </div>
     </div>
 
@@ -49,13 +57,14 @@
       <select
         id="occupation"
         formControlName="occupation"
-        class="form-control">
+        class="form-control"
+        [class.invalid]="isFieldInvalid('occupation')">
         <option value="">Select Occupation</option>
         <option *ngFor="let occ of occupations" [value]="occ.value">
           {{occ.name}}
         </option>
       </select>
-      <div *ngIf="premiumForm.get('occupation')?.invalid && premiumForm.get('occupation')?.touched" class="error">
+      <div *ngIf="isFieldInvalid('occupation')" class="error">
         Occupation is required
       </div>
       <div *ngIf="selectedOccupationDetails" class="occupation-details">
@@ -64,16 +73,20 @@
     </div>
 
     <div class="form-group">
-      <label for="deathSumInsured">Death - Sum Insured *</label>
+      <label for="deathSumInsured">Death - Sum Insured ($) *</label>
       <input
         id="deathSumInsured"
         type="number"
         formControlName="deathSumInsured"
         class="form-control"
-        placeholder="Enter sum insured amount">
-      <div *ngIf="premiumForm.get('deathSumInsured')?.invalid && premiumForm.get('deathSumInsured')?.touched" class="error">
-        <span *ngIf="premiumForm.get('deathSumInsured')?.errors?.['required']">Sum Insured is required</span>
-        <span *ngIf="premiumForm.get('deathSumInsured')?.errors?.['min']">Sum Insured must be greater than 0</span>
+        [class.invalid]="isFieldInvalid('deathSumInsured')"
+        placeholder="Enter sum insured amount"
+        min="1"
+        max="10000000">
+      <div *ngIf="isFieldInvalid('deathSumInsured')" class="error">
+        <span *ngIf="getFieldError('deathSumInsured', 'required')">Sum Insured is required</span>
+        <span *ngIf="getFieldError('deathSumInsured', 'invalidAmount')">Amount must be greater than 0</span>
+        <span *ngIf="getFieldError('deathSumInsured', 'amountTooHigh')">Amount cannot exceed $10,000,000</span>
       </div>
     </div>
 
